--- a/hello-spring-cloud-web-admin-feign/src/main/resources/application.yml
+++ b/hello-spring-cloud-web-admin-feign/src/main/resources/application.yml
@@ -1,12 +1,7 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-server:
-  port: 8765
 spring:
-  application:
-    name: hello-spring-cloud-web-admin-feign
-feign:
-  hystrix:
-    enabled: true
+  cloud:
+    config:
+      uri: http://localhost:8888
+      name: web-admin-feign
+      label: master
+      profile: dev
