--- a/hello-spring-cloud-service-admin/src/main/resources/application.yml
+++ b/hello-spring-cloud-service-admin/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
   application:
     name: hello-spring-cloud-service-admin
-
+  zipkin:
+    base-url: http://localhost:9411
 server:
   port: 8762
 
