--- a/hello-spring-cloud-zuul/src/main/resources/application.yml
+++ b/hello-spring-cloud-zuul/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: hello-spring-cloud-zuul
+  zipkin:
+    base-url: http://localhost:9411
 server:
   port: 8769
 eureka:
