--- a/hello-spring-cloud-dependencies/pom.xml
+++ b/hello-spring-cloud-dependencies/pom.xml
@@ -24,6 +24,7 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
         <zipkin.version>2.10.1</zipkin.version>
+        <spring-boot-admin.version>2.0.1</spring-boot-admin.version>
     </properties>
 
     <dependencies>
@@ -65,6 +66,11 @@
                 <groupId>io.zipkin.java</groupId>
                 <artifactId>zipkin-autoconfigure-ui</artifactId>
                 <version>${zipkin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-server</artifactId>
+                <version>${spring-boot-admin.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
