--- a/spring-cloud-config/repo/web-admin-feign-dev.yml
+++ b/spring-cloud-config/repo/web-admin-feign-dev.yml
@@ -9,6 +9,10 @@ spring:
       content-type: text/html
   zipkin:
     base-url: http://localhost:9411
+  boot:
+    admin:
+      client:
+        url: http://localhost:8084
 server:
   port: 8765
 feign:
