--- a/hello-spring-cloud-zuul/src/main/resources/application.yml
+++ b/hello-spring-cloud-zuul/src/main/resources/application.yml
@@ -3,6 +3,10 @@ spring:
     name: hello-spring-cloud-zuul
   zipkin:
     base-url: http://localhost:9411
+  boot:
+    admin:
+      client:
+        url: http://localhost:8084
 server:
   port: 8769
 eureka:
