--- a/hello-spring-cloud-eureka/src/main/resources/application.yml
+++ b/hello-spring-cloud-eureka/src/main/resources/application.yml
@@ -15,3 +15,7 @@ spring:
     name: hello-spring-cloud-eureka
   zipkin:
     base-url: http://localhost:9411
+  boot:
+    admin:
+      client:
+        url: http://localhost:8084
